# libopt

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  otp.c  otp.h
tests/: Makefile.am  check_hotp.c
